@@ -1,2 +1,9 @@
+Jun. 26 2011
+Canvas, Sprite etc.
+Controller interface.
+Message system.
+Main loop logic.
+Basic render flow.
+
 Jun. 14 2011
 Project started.
